--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ts-node": "^10.9.1"
+    "dotenv": "^16.0.1",
+    "ts-node": "^10.9.1",
+    "twitter-api-sdk": "^1.1.0"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
