feat: スクリプトの引数を外部から指定できるように修正

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "getUsersByWordInTweet": "ts-node src/scripts/get-users-by-word-in-tweet.ts",
     "test": "jest"
   },
   "author": "",
